@@ -39,16 +39,14 @@
 \alias{seqnames,Proteins-method}
 \alias{show,Proteins-method}
 
-
-\alias{proteinCoverage,Proteins-method}
-\alias{proteinCoverage}
-\alias{proteotypic,Proteins-method}
-\alias{proteotypic}
 \alias{cleave,Proteins-method}
 \alias{isCleaved}
 \alias{isCleaved,Proteins-method}
 \alias{addIdentificationData,Proteins,character-method}
+
 \alias{rmEmptyRanges}
+\alias{proteotypic}
+\alias{proteinCoverage}
 
 \title{The \code{Proteins} Class for Proteomics Data And Meta-Data}
 
@@ -192,10 +190,6 @@
     \item{pfilter}{\code{signature(x = "Proteins", mass = "numeric", len
 	= "numeric", ...)}: ... }
 
-    \item{proteinCoverage}{\code{signature(x = "Proteins")}: ... }
-
-    \item{proteotypic}{\code{signature(x = "Proteins")}: ... }
-
     \item{cleave}{\code{signature(x = "Proteins", enzym = "character",
             missedCleavages = "numeric")}:
         Cleaves all proteins using the \code{enzym} rule while allowing
@@ -224,8 +218,17 @@
 \section{Functions}{
   \describe{
 
-    \item{rmEmptyRanges}{signature(x = "Proteins")}{ ...}
+    \item{rmEmptyRanges}{\code{signature(x = "Proteins")}}:{ removes
+    proteins with empty peptide ranges. }
 
+    \item{proteotypic}{\code{signature(x = "Proteins")}: returns a
+    modified Proteins object. \code{pcols(x)} gains a "Proteotypic"
+    logical column, indicating of the peptide is proteotypic or now. }
+
+    \item{proteinCoverage}{\code{signature(pattern = "Proteins")}:
+    calulates the coverage of proteins. \code{pcols(x)} gains a
+    "Coverage" numeric column. }
+  
   }
 }
 
